[workspace]
resolver = "2"
members = [
  "rgen-base",
  "rgen-placer",
  "rgen-biome",
  "rgen-world",
  "rgen-jni",
  "rgen-viewer",

  "spline-editor",
]

[workspace.dependencies]
rgen-base = { path = "rgen-base" }
rgen-placer = { path = "rgen-placer" }
rgen-biome = { path = "rgen-biome" }
rgen-world = { path = "rgen-world" }
