[workspace]
resolver = "2"
members = [
  "rgen-spline",
  "rgen-base",
  "rgen-placer",
  "rgen-llama",
  "rgen-biome",
  "rgen-world",
  "rgen-jni",
  "rgen-viewer",

  "spline-editor",
]

[workspace.dependencies]
rgen-spline = { path = "rgen-spline" }
rgen-base = { path = "rgen-base" }
rgen-placer = { path = "rgen-placer" }
rgen-structure = { path = "rgen-structure" }
rgen-biome = { path = "rgen-biome" }
rgen-world = { path = "rgen-world" }
