[package]
name = "rgen-biome"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
rgen-spline.workspace = true
rgen-base.workspace = true
rgen-llama.workspace = true
rgen-placer.workspace = true
rgen-world.workspace = true
smallvec = "1.13.2"
lru = "0.12.5"
puffin = "0.19.1"
log = "0.4.22"
