[package]
name = "rgen-jni-impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rgen-base.workspace = true
rgen-placer.workspace = true
rgen-biome.workspace = true
rgen-world.workspace = true
rgen-spline.workspace = true

jni = "0.21.1"
fern = "0.6.2"
log = "0.4.22"
crossbeam-channel = "0.5.13"

[features]
# Links to obfuscated names. Used for release builds.
obf-names = []

[[bench]]
name = "chunk"
