[package]
name = "rgen-jni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["cdylib"]

[dependencies]
rgen-base.workspace = true
rgen-biome.workspace = true

jni = "0.21.1"

[features]
# Links to obfuscated names. Used for release builds.
obf-names = []
