[package]
name = "rgen-viewer"
version = "0.1.0"
edition = "2024"

default-run = "rgen-viewer"

[dependencies]
rgen-base.workspace = true
rgen-placer.workspace = true
rgen-biome.workspace = true
rgen-world.workspace = true

sdl2 = { version = "0.36.0", features = ["ttf"] }
rand = "0.8.5"
parking_lot = "0.12.1"
crossbeam-channel = "0.5.12"
splines = "4.3.1"
